--- a/bigbluebutton-html5/public/locales/en.json
+++ b/bigbluebutton-html5/public/locales/en.json
@@ -796,6 +796,7 @@
     "app.whiteboard.toolbar.tools.text": "Text",
     "app.whiteboard.toolbar.thickness": "Drawing thickness",
     "app.whiteboard.toolbar.thicknessDisabled": "Drawing thickness is disabled",
+    "app.whiteboard.toolbar.tools.eraser": "Eraser",
     "app.whiteboard.toolbar.color": "Colors",
     "app.whiteboard.toolbar.colorDisabled": "Colors is disabled",
     "app.whiteboard.toolbar.color.black": "Black",
